--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=update
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/testdb2
+serverTimezone=Europe/Zagreb
+spring.datasource.username=root
+spring.datasource.password=matea123
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.sqlScriptEncoding=UTF-8
 
 spring.h2.console.enabled=true
